--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ mod_archive_name=Echoes
 #Publishing
 mod_name=Echoes
 curseforge_id=1124422
-modrinth_id=
+modrinth_id=ZOL7V4Fl
 
 # Version
 version=1.0.0
